Fix URI decoding issue on Firefox

--- a/app/css/io.styl
+++ b/app/css/io.styl
@@ -192,6 +192,7 @@ article
     
 button.speaker
   // posi
+  margin-top .1em
   // box
   height 1.2em
   width @height
@@ -199,7 +200,7 @@ button.speaker
   font-family $sans
   font-size .8em
   line-height 1.2*.7
-  vertical-align .3em
+  vertical-align text-top
   // style
   background none
   border 0
